--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,7 +35,7 @@
         </h3>
         <div class="navv  ml-auto">
           <h5>
-            <a class="nav-link" href="/about">Contact Us</a>
+            <a class="nav-link" href="/contact">Contact Us</a>
       </h5>
           <h5>
             <a class="nav-link" href="/about">About Us</a>
