--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,7 +3,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.min.css'>
+    
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -39,26 +41,26 @@
            <h1 style="text-align: center; margin-bottom: 30px;">
                Registration Page
            </h1>
-        <form action="">
+        <form action="/signup" method="POST">
             <div class="form-group">
               
-                <input type="text" required class="form-control" placeholder="Enter first name" autocomplete="off" id="email" autocomplete="off">
+                <input type="text" required class="form-control" name="first" placeholder="Enter first name" autocomplete="off" id="email" autocomplete="off">
               </div>
               <div class="form-group">
               
-                <input type="text" required class="form-control" placeholder="Enter last name" autocomplete="off" id="email" autocomplete="off">
+                <input type="text" required class="form-control" name="last" placeholder="Enter last name" autocomplete="off" id="email" autocomplete="off">
               </div>
             <div class="form-group">
               
-              <input type="email" required class="form-control" placeholder="Enter email" id="email" autocomplete="off">
+              <input type="email" required class="form-control" name="email" placeholder="Enter email" id="email" autocomplete="off">
             </div>
             <div class="form-group">
              
-              <input type="password" required class="form-control" placeholder="Enter password" autocomplete="off" id="pwd">
+              <input type="password" required class="form-control" name="password" placeholder="Enter password" autocomplete="off" id="pwd">
             </div>
             <div class="form-group">
               
-                <input type="password" required class="form-control" placeholder="Verify Password" id="email" autocomplete="off">
+                <input type="password" name="repassword" required class="form-control" placeholder="Verify Password" id="email" autocomplete="off">
               </div>
            
             <button type="submit" class="btn btn-primary">Submit</button>
