--- a/views/forgot.ejs
+++ b/views/forgot.ejs
@@ -6,6 +6,8 @@
 
 <!-- jQuery library -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
@@ -38,20 +40,29 @@
     </style>
 </head>
 <body>
+    <% if(typeof message!='undefined') 
+    {
+      %>
+      <script language='javascript'>
+        swal('Oops!','Some error!!Cannot change password','error');
+     </script>
+     <%
+    }
+    %>
     <div class="container">
        <div class="main">
            <h1 style="text-align: center; margin-bottom: 30px;font-size: 50px;">
                Update Password
            </h1>
            
-        <form action="">
+        <form action="/change" method="POST">
             <div class="form-group">
               
-              <input type="email" required class="form-control" placeholder="New Password" id="email" autocomplete="off">
+              <input type="email" required class="form-control" name="email" placeholder="Enter your email" id="email" autocomplete="off">
             </div>
             <div class="form-group">
              
-              <input type="password" required class="form-control" placeholder="Verify password" autocomplete="off" id="pwd">
+              <input type="password" required class="form-control" name="password" placeholder="Enter new password" autocomplete="off" id="pwd">
             </div>
            
             <button type="submit" class="btn btn-primary">Update</button>
