--- a/views/index.ejs
+++ b/views/index.ejs
@@ -49,7 +49,19 @@
               <a class="nav-link" href="/bt">Corona Info</a>
         </h5>
 <h5>          
-              <a class="nav-link" href="/signup" >SignUp/Login</a>
+  <% if(typeof email!='undefined')
+  {
+    %>
+              <a class="nav-link" href="/signup" >Logout</a>
+      <%
+  }
+  else 
+  {
+%>
+<a class="nav-link" href="/signup" >Signup/Login</a>
+<%
+  }
+  %>
             </h5> 
         </div>
         <!-- Links -->
