--- a/views/login.ejs
+++ b/views/login.ejs
@@ -49,6 +49,15 @@
    <%
   }
   %>
+  <% if(typeof password!='undefined') 
+  {
+    %>
+    <script language='javascript'>
+      swal('Congratulations','Password changed','success');
+   </script>
+   <%
+  }
+  %>
     <div class="container">
        <div class="main">
            <h1 style="text-align: center; margin-bottom: 30px;font-size: 50px;">
