--- a/views/index.ejs
+++ b/views/index.ejs
@@ -56,6 +56,9 @@
       <h5>
         <a class="nav-link" href="/weather">Weather</a>
   </h5>
+  <h5>
+    <a class="nav-link" href="/shopping">Shopping</a>
+</h5>
         <h5>
               <a class="nav-link" href="/bt">Corona Info</a>
         </h5>
