--- a/views/index.ejs
+++ b/views/index.ejs
@@ -78,7 +78,7 @@
   %>
 </h5>
 <h5>
-  <% if(typeof email!='undefined' && (email=='rishav@gmail.com' ||  email=='mangal.radhika5@gmail.com'))
+  <% if(typeof email!='undefined' && (email=='rishav@gmail.com' ||  email=='mangal.radhika5@gmail.com' || email=='ashwathpadmanaban39@gmail.com'))
   {
 %>
 <a class="nav-link" href="/admin" >Admin</a>
