--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,6 +5,10 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 <!-- CSS only -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
 
 <body>
 <!-- <div class="round">
@@ -30,8 +34,15 @@
 <a href="www.gmail.com/rishavrishu2001.ra" target="_blank">
 <p class="a"><i class="fa fa-facebook">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</i></p></a>
 </div> -->
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-
+<% if(typeof message!='undefined') 
+  {
+    %>
+    <script language='javascript'>
+      swal('Woahh','Please check your email once...','success');
+   </script>
+   <%
+  }
+  %>
 <div class="row" id="contatti">
 <div class="container mt-5" >
     <div class="row" style="height:550px;">
