--- a/views/index.ejs
+++ b/views/index.ejs
@@ -310,7 +310,9 @@
 <iframe src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map" width="100%" height="600px"></iframe>
 
 <div class="like">
+  <div class="inner">
   <i class="fa fa-thumbs-up" style="font-size:98px;"></i>
+</div>
 </div>
 
 
