--- a/views/index.ejs
+++ b/views/index.ejs
@@ -310,8 +310,10 @@
 <iframe src="https://ourworldindata.org/grapher/total-cases-covid-19?tab=map" width="100%" height="600px"></iframe>
 
 <div class="like">
+  <h2 class="hh">If you liked our website,please click the thumbs up icon :)</h2>
+
   <div class="inner">
-  <i class="fa fa-thumbs-up" style="font-size:98px;"></i>
+  <i class="fa fa-thumbs-up" style="font-size:98px;color: red;"></i>
 </div>
 </div>
 
