--- a/views/index.ejs
+++ b/views/index.ejs
@@ -313,7 +313,7 @@
   <h2 class="hh">If you liked our website,please click the thumbs up icon :)</h2>
 
   <div class="inner">
-  <i class="fa fa-thumbs-up" style="font-size:98px;color: red;"></i>
+  <i class="fa fa-thumbs-up" id="like" style="font-size:98px;color: red;"></i>
 </div>
 </div>
 
