--- a/views/index.ejs
+++ b/views/index.ejs
@@ -411,9 +411,10 @@
 
 
 <script lang="javascript">
-  console.log(lat1)
-  console.log(lon1)
-  console.log(zz1)
+  document.getElementById("like").onclick=function()
+  {
+    alert("Checking")
+  }
   var array=[];
   var array1=[];
   var array2=[];
