--- a/views/index.ejs
+++ b/views/index.ejs
@@ -354,7 +354,7 @@
       method:"POST",
       data:{email:email},
       success:function(result){
-        
+        console.log(result)
       }
     })
   })
