--- a/views/index.ejs
+++ b/views/index.ejs
@@ -320,6 +320,9 @@
     <i class="fa fa-thumbs-up" style="font-size:98px;color:red" id="like"></i>
 
   </div>
+  <h2 class="hh">
+   
+  </h2>
 </div>
 <%
 }
@@ -354,7 +357,8 @@
       method:"POST",
       data:{email:email},
       success:function(result){
-        console.log(result)
+        console.log(result.length)
+        $(".hh").html("Liked")
       }
     })
   })
