--- a/assets/style.css
+++ b/assets/style.css
@@ -13,6 +13,11 @@
     color: black;
     margin-top:60px;
 }
+.hh1{
+    text-align: center;
+    color: black;
+    margin-top:60px;
+}
 #loading{
 	position: fixed;
 	width: 100%;
